kubernetes/ambassador.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ambassador-backend
  name: ambassador-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ambassador-backend
  template:
    metadata:
      labels:
        io.kompose.service: ambassador-backend
    spec:
      containers:
        - args:
            - go
            - run
            - main.go
          image: ambassador:0.0.1
          name: ambassador-backend
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: ambassador-queue
  name: ambassador-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ambassador-queue
  template:
    metadata:
      labels:
        io.kompose.service: ambassador-queue
    spec:
      containers:
        - args:
            - go
            - run
            - src/commands/consumer.go
          image: ambassador:0.0.1
          name: ambassador-queue
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ambassador-backend
  name: ambassador-backend
spec:
  ports:
    - name: "8003"
      port: 8003
      targetPort: 8000
  selector:
    io.kompose.service: ambassador-backend
