kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ambassador-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: ImplementationSpecific
            backend:
              service:
                name: users-backend
                port:
                  number: 8001
